<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meshcorium</string>
    <string name="url_screen_title">Подключение к Meshcorium</string>
    <string name="url_screen_subtitle">При первом запуске укажи URL веб-интерфейса сервиса. Пример: http://192.168.1.20:8080</string>
    <string name="url_hint">URL веб-интерфейса</string>
    <string name="open_web_client">Открыть web-клиент</string>
    <string name="invalid_url">Укажи корректный URL с http:// или https://</string>
    <string name="action_reload">Перезагрузить</string>
    <string name="action_change_server">Сменить адрес сервера</string>
    <string name="action_open_menu">Открыть меню</string>
    <string name="notification_permission_denied">Уведомления отключены системным разрешением</string>
    <string name="notification_channel_name">Сообщения Meshcorium</string>
    <string name="notification_channel_description">Push-уведомления о новых сообщениях из Meshcorium</string>
    <string name="default_notification_title">Meshcorium</string>
    <string name="default_notification_body">Новое сообщение</string>
    <string name="nav_notifications">Уведомления</string>
    <string name="nav_messages">Чаты</string>
    <string name="nav_contacts">Контакты</string>
    <string name="nav_maps">Карта</string>
    <string name="nav_settings">Настройки</string>
    <string name="client_settings_title">Настройки клиента</string>
    <string name="client_connection_settings">Подключение к серверу</string>
    <string name="client_connection_settings_summary">Изменить адрес Meshcorium backend</string>
</resources>
